# YoutubePlaylistScraper

./: README.md  file_manager.py  main.py  playlist.json  progress_bar.py  pyproject.toml  requirements.txt  youtube_playlist_scrapper.py
.github/workflows/: ci.yaml
src/: __init__.py  file_manager.py  playlist_metadata.py  playlists_container.py  progress_bar.py  scrapper.py  video_metadata.py
tests/: test_scraping.py
