[project]
name = "youtubeplaylistscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama==0.4.6",
    "pytube==15.0.0",
    "rich==13.9.2",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]

[tool.ruff]
line-length = 120
show-fixes = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
